Code regactoring and issue list created